add browser script link

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <title>fission did</title>
 </head>
 <body>
-    <div id="content"></div>
+    <div id="content">aaaa</div>
+    <script src="https://unpkg.com/webnative@0.26.1/dist/index.umd.min.js"></script>
     <script src="/bundle.js"></script>
 </body>
 </html>
